fix(server): preserve bootstrap validation errors